k8s/system/opentelemetry-collector/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry-collector
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
